--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.6'
 services:
   telegraf:
-    image: telegraf:1.18-alpine
+    image: telegraf:1.29-alpine
     volumes:
     - ./telegraf/etc/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+    - /var/run/docker.sock:/var/run/docker.sock:ro
     depends_on:
       - influxdb
     links:
