--- a/telegraf/etc/telegraf.conf
+++ b/telegraf/etc/telegraf.conf
@@ -229,7 +229,7 @@
   # container_names = []
 
   ## Set the source tag for the metrics to the container ID hostname, eg first 12 chars
-  source_tag = true
+  source_tag = false
 
   ## Containers to include and exclude. Collect all if empty. Globs accepted.
   container_name_include = []
@@ -245,7 +245,7 @@
   ## Objects to include for disk usage query
   ## Allowed values are "container", "image", "volume" 
   ## When empty disk usage is excluded
-  # storage_objects = []
+  storage_objects = []
 
   ## Timeout for docker list, info, and stats commands
   timeout = "5s"
