--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,17 @@ services:
       - ./grafana/provisioning/:/etc/grafana/provisioning/
       - ./grafana/dashboards/:/var/lib/grafana/dashboards/
 
+  mongodb:
+    image: mongo:6.0
+    ports:
+      - '127.0.0.1:27017:27017'
+    volumes:
+      - mongodb_data:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
+
 volumes:
   grafana_data: {}
   influxdb_data: {}
+  mongodb_data: {}
