--- a/telegraf/etc/telegraf.conf
+++ b/telegraf/etc/telegraf.conf
@@ -229,7 +229,7 @@
   # container_names = []
 
   ## Set the source tag for the metrics to the container ID hostname, eg first 12 chars
-  source_tag = false
+  source_tag = true
 
   ## Containers to include and exclude. Collect all if empty. Globs accepted.
   container_name_include = []
