--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,19 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=example
 
+  elasticsearch:
+    image: elasticsearch:8.11.1
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - '127.0.0.1:9200:9200'
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+
 volumes:
   grafana_data: {}
   influxdb_data: {}
   mongodb_data: {}
+  elasticsearch_data: {}
