load test result

--- a/telegraf/etc/telegraf.conf
+++ b/telegraf/etc/telegraf.conf
@@ -275,3 +275,23 @@
   # tls_key = "/etc/telegraf/key.pem"
   ## Use TLS but skip chain & host verification
   # insecure_skip_verify = false
+
+# MongoDB input plugin
+[[inputs.mongodb]]
+  servers = ["mongodb://root:example@mongodb:27017"]
+  gather_perdb_stats = true
+  gather_col_stats = true
+  gather_top_stat = true
+
+# Elasticsearch input plugin
+[[inputs.elasticsearch]]
+  servers = ["http://elasticsearch:9200"]
+  cluster_health = true
+  cluster_stats = true
+  node_stats = ["jvm", "http", "process", "thread_pool"]
+  indices_include = ["*"] # This will include all indices
+
+  
+# Nginx input plugin
+[[inputs.nginx]]
+  urls = ["http://nginx:80/nginx_status"]
