--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=example
+    command: ["mongod", "--setParameter", "diagnosticDataCollectionEnabled=true"]
 
   elasticsearch:
     image: elasticsearch:8.11.1
@@ -55,6 +56,7 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.monitoring.templates.enabled=true
     ports:
       - '127.0.0.1:9200:9200'
     volumes:
@@ -64,7 +66,7 @@ services:
     image: nginx:1.25-alpine
     ports:
       - '127.0.0.1:80:80'
-      - '127.0.0.1:443:443'
+      - '127.0.0.1:8443:443'
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
