--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,6 +2,14 @@ server {
     listen 80;
     server_name localhost;
 
+    # Nginx status
+    location /nginx_status {
+        stub_status on;
+        access_log off;
+        allow 172.16.0.0/12;  # Docker network
+        deny all;
+    }
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
